tlatools/examples/SingleProcessIn.toolbox/Model_1_SnapShot_1653978382063/MC.tla
---- MODULE MC ----
EXTENDS SingleProcessIn, TLC

\* CONSTANT definitions @modelParameterConstants:0P
const_16539783498923000 == 
3
----

=============================================================================
\* Modification History
\* Created Tue May 31 06:25:49 GMT 2022 by zunai
